finished readme and deleted useless files

--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -15,6 +15,6 @@
   </p>
   <p>Se não, descarte esse email.</p>
   <p>Obrigado,<br />
-    <strong>Equipe GoBarber</strong>
+    <strong>Equipe RTimer</strong>
   </p>
 </div>
